x-pack/plugins/spaces/public/space_selector/space_selector.scss
.spcSpaceSelector {
  @include kibanaFullScreenGraphics;
  position: relative;
}

.spcSpaceSelector__pageContent {
  position: relative;
  z-index: 10;
}

// Fix forced focus outline on text that isn't a link to just be an underline
.spcSpaceSelector__pageHeader {
  &:focus {
    outline: none;
    text-decoration: underline;
  }
}

.spcSpaceSelector__searchHolder {
  width: $euiFormMaxWidth; // make sure it's as wide as our default form element width
  max-width: 100%;
  margin-inline: auto;
}

.spcSpaceSelector__errorPanel {
  text-align: center;
  margin-inline: auto;
  max-width: 700px;
}

