Fix both page scrolling and overlap issues
- by sending the full screen graphics to a visual-only portalled z-index: -1 div

--- a/x-pack/plugins/spaces/public/space_selector/space_selector.scss
+++ b/x-pack/plugins/spaces/public/space_selector/space_selector.scss
@@ -1,6 +1,11 @@
 .spcSpaceSelector {
+  background: transparent;
+}
+
+.spcSelectorBackground {
   @include kibanaFullScreenGraphics;
-  position: relative;
+  z-index: -1;
+  pointer-events: none;
 }
 
 .spcSpaceSelector__pageContent {
